examples/errors/enum_case/main.lc

enum A {
	case a
	case b
}

function main() {

}
